Implement file transfer between clients

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>QuickFile</title>
+  <title>QuickFile: Upload</title>
   <meta name="description" content="A fast file transfer webapp.">
   <link rel="stylesheet" href="css/styles.css">
 
@@ -13,6 +13,8 @@
 <body>
   <input type="file" id="file">
   <p id="file_status">Select a file.</p>
-  <script src="app.js"></script>
+  <input id = "roomNumber" type = "text">
+  <button id = "upload" type="Button">Upload</button>
+  <script src="scripts/upload.js"></script>
 </body>
 </html>
