Move valid room check to signing GET request

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-  <input type="file" id="file">
-  <p id="file_status">Select a file.</p>
-  <input id = "roomNumber" type = "text">
+  <h2>Select a file:</h2>
+  <p><input type="file" id="file"></p>
+  <p><input id = "roomNumber" type = "text" placeholder="Receiver number"></p>
+  <p id="file_status"></p>
   <button id = "upload" type="Button">Upload</button>
   <script src="scripts/upload.js"></script>
 </body>
