Change frontend, add new index page

--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,15 @@
 <head>
   <meta charset="utf-8">
 
-  <title>QuickFile: Upload</title>
+  <title>QuickFile</title>
+  <h1>QuickFile</h1>
   <meta name="description" content="A fast file transfer webapp.">
   <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
-  <h2>Select a file:</h2>
-  <p><input type="file" id="file"></p>
-  <p><input id = "roomNumber" type = "text" placeholder="Receiver number"></p>
-  <p id="file_status"></p>
-  <button id = "upload" type="Button">Upload</button>
-  <script src="scripts/upload.js"></script>
+  <a href="/upload">Upload</a>
+  <a href="/receive">Receive</a>
 </body>
 </html>
