--- a/receive.html
+++ b/receive.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
-  <h1 id="identifier">Waiting for id...</h1>
-  <h1>Waiting for files...</h1>
+  <p>Your number:</p>
+  <h1 id="identifier">Waiting for id...</h1><br>
+  <h1 id="animated">Waiting for files</h1>
   <p>Received Files:</p>
   <ul id="files"></ul>
   <script src="socket.io/socket.io.js"></script>
