Add navigation bar to all pages

--- a/receive.html
+++ b/receive.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+  <h1><a href="/" style="text-decoration: none;">QuickFile</a></h1>
+  <a href="/upload">Upload</a>
+  <b>Receive</b>
+  <hr>
   <p>Your number:</p>
   <h1 id="identifier">Waiting for id...</h1><br>
   <h1 id="animated">Waiting for files</h1>
