--- a/upload.html
+++ b/upload.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-  <br>
+  <h1><a href="/" style="text-decoration: none;">QuickFile</a></h1>
+  <b>Upload</b>
+  <a href="/receive">Receive</a>
+  <hr>
   <h1>Select a file:</h1>
   <p><input type="file" id="file"></p>
   <p><input id = "roomNumber" type = "text" placeholder="Receiver number"></p>
