Implement fix for files opening inline (crashing Firefox when sending .skp files)

--- a/upload.html
+++ b/upload.html
@@ -19,7 +19,7 @@
   <p><input type="file" id="file"></p>
   <p><input id = "roomNumber" type = "text" placeholder="Receiver number"></p>
   <p id="file_status"></p>
-  <button id = "upload" type="Button">Upload</button>
+  <button id = "upload" type="Button">Send File</button>
   <script src="scripts/upload.js"></script>
 </body>
 </html>
