Add upload percentage monitoring for sender, change "upload" to "send"

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1>QuickFile</h1>
-  <a href="/upload">Upload</a>
+  <a href="/send">Send</a>
   <a href="/receive">Receive</a>
 </body>
 </html>
