--- a/receive.html
+++ b/receive.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1><a href="/" style="text-decoration: none;">QuickFile</a></h1>
-  <a href="/upload">Upload</a>
+  <a href="/send">Send</a>
   <b>Receive</b>
   <hr>
   <p>Your number:</p>
