--- a/upload.html
+++ b/upload.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>QuickFile: Upload</title>
+  <title>QuickFile: Send</title>
   <meta name="description" content="A fast file transfer webapp.">
   <link rel="stylesheet" href="css/styles.css">
 
@@ -12,7 +12,7 @@
 
 <body>
   <h1><a href="/" style="text-decoration: none;">QuickFile</a></h1>
-  <b>Upload</b>
+  <b>Send</b>
   <a href="/receive">Receive</a>
   <hr>
   <h1>Select a file:</h1>
